--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,9 +23,14 @@ section{
 	text-align: center;
 }
 
-.main>h1{
+.main>img{
 	margin-bottom: 1em;
-	margin-top: 2em;
+
+}
+
+.main>p{
+  margin: 0 auto;
+  max-width: 700px;
 }
 
 .copy{
