--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,54 +1,54 @@
 /* GENERAL */
 
 :root {
-  --pico-h1-color: #2d3138;;
+  --pico-h1-color: #2d3138;
+  ;
 }
 
-section{
-	margin-top: 2em;
-	margin-bottom: 2em;
+section {
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
-.px-1{
-	padding-top: .5em;
-	padding-bottom: .5em;
+.px-1 {
+  padding-top: .5em;
+  padding-bottom: .5em;
 }
 
-.mx-2{
-	margin-top: 2em;
-	margin-bottom: 2em;
+.mx-2 {
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
-.center{
-	text-align: center;
+.center {
+  text-align: center;
 }
 
-.main>img{
-	margin-bottom: 1em;
+.main>img {
+  margin-bottom: 1em;
 
 }
 
-.main>p{
+.main>p {
   margin: 0 auto;
   max-width: 700px;
 }
 
-.copy{
-	color: var(--pico-muted-color);
+.copy {
+  color: var(--pico-muted-color);
 }
 
-
 mark {
-    padding: 0;
-    background: linear-gradient(to right, #84266d, #6f3985, #5d409a, #43489d);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    font-size: xxx-large;
+  padding: 0;
+  background: linear-gradient(to right, #84266d, #6f3985, #5d409a, #43489d);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-size: xxx-large;
 }
 
 .price li {
-/*  border-bottom: 1px solid #eee;*/
+  /*  border-bottom: 1px solid #eee;*/
   padding: .5rem;
   text-align: center;
   list-style: none;
