adding contact and support pages and updating styles for them adding link to index and remove link from privacy and terms

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,6 +38,11 @@ section {
   color: var(--pico-muted-color);
 }
 
+.no-link {
+  text-decoration: none;
+  color: inherit;
+}
+
 mark {
   padding: 0;
   background: linear-gradient(to right, #84266d, #6f3985, #5d409a, #43489d);
